Add admin features
Also add dtos validation
