# src/main/java/com/example/bankcards/dto/ErrorResponse.java
@@ -1,10 +1,15 @@
 package com.example.bankcards.dto;
 
 import java.time.LocalDateTime;
+import java.util.Map;
 
 public record ErrorResponse(
         int status,
         String message,
-        LocalDateTime timestamp
+        LocalDateTime timestamp,
+        Map<String, String> errors
 ) {
+    public ErrorResponse(int status, String message, LocalDateTime timestamp) {
+        this(status, message, timestamp, null);
+    }
 }
