# src/main/java/com/example/bankcards/entity/Card.java
@@ -46,8 +46,4 @@ public class Card {
     @ManyToOne(fetch = FetchType.LAZY)
     @JoinColumn(name = "owner_id", nullable = false)
     private User owner;
-
-    enum CardStatus {
-        ACTIVE, BLOCKED, EXPIRED;
-    }
 }
