# src/main/java/com/example/bankcards/exception/GlobalExceptionHandler.java
@@ -1,21 +1,26 @@
 package com.example.bankcards.exception;
 
 import com.example.bankcards.dto.ErrorResponse;
+import io.jsonwebtoken.ExpiredJwtException;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.http.converter.HttpMessageNotReadableException;
 import org.springframework.security.authentication.BadCredentialsException;
+import org.springframework.security.authorization.AuthorizationDeniedException;
 import org.springframework.security.core.AuthenticationException;
+import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.RestControllerAdvice;
 
 import java.time.LocalDateTime;
+import java.util.HashMap;
+import java.util.Map;
 
 @RestControllerAdvice
 public class GlobalExceptionHandler {
 
     @ExceptionHandler({BadCredentialsException.class, HttpMessageNotReadableException.class})
-    public ResponseEntity<ErrorResponse> handleBadCredentialsException(Exception e) {
+    public ResponseEntity<ErrorResponse> handleBadCredentialsException(Exception ex) {
         HttpStatus status = HttpStatus.BAD_REQUEST;
         ErrorResponse response = new ErrorResponse(
                 status.value(),
@@ -36,6 +41,17 @@ public class GlobalExceptionHandler {
         return new ResponseEntity<>(response, status);
     }
 
+    @ExceptionHandler(ExpiredJwtException.class)
+    public ResponseEntity<ErrorResponse> handleExpiredJwtException(ExpiredJwtException ex) {
+        HttpStatus status = HttpStatus.UNAUTHORIZED;
+        ErrorResponse response = new ErrorResponse(
+                status.value(),
+                "Срок действия токена истек.",
+                LocalDateTime.now()
+        );
+        return new ResponseEntity<>(response, status);
+    }
+
     @ExceptionHandler(RuntimeException.class)
     public ResponseEntity<ErrorResponse> handleRuntimeException(RuntimeException ex) {
         HttpStatus status = HttpStatus.BAD_REQUEST;
@@ -44,6 +60,35 @@ public class GlobalExceptionHandler {
                 ex.getMessage(),
                 LocalDateTime.now()
         );
+        return new ResponseEntity<>(response, status);
+    }
+
+    @ExceptionHandler(AuthorizationDeniedException.class)
+    public ResponseEntity<ErrorResponse> handleAuthorizationDeniedException(AuthorizationDeniedException ex) {
+        HttpStatus status = HttpStatus.FORBIDDEN;
+        ErrorResponse response = new ErrorResponse(
+                status.value(),
+                ex.getMessage(),
+                LocalDateTime.now()
+        );
+        return new ResponseEntity<>(response, status);
+    }
+
+    @ExceptionHandler(MethodArgumentNotValidException.class)
+    public ResponseEntity<ErrorResponse> handleValidationExceptions(MethodArgumentNotValidException ex) {
+        Map<String, String> errors = new HashMap<>();
+
+        ex.getBindingResult().getFieldErrors().forEach(error ->
+                errors.put(error.getField(), error.getDefaultMessage()));
+
+        HttpStatus status = HttpStatus.BAD_REQUEST;
+        ErrorResponse response = new ErrorResponse(
+                status.value(),
+                "Ошибка валидации данных",
+                LocalDateTime.now(),
+                errors
+        );
+
         return new ResponseEntity<>(response, status);
     }
 }
